[FilterRenting] add Filter for RentingOrderListVC

--- a/DMSDriver/DMSDriver/Resources/Storyboards/RentingOrder.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/RentingOrder.storyboard
@@ -300,8 +300,8 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XGU-yb-G01">
-                                        <rect key="frame" x="30" y="49" width="223.5" height="16.5"/>
-                                        <string key="text">Here is your plan for today - 29 Sep
+                                        <rect key="frame" x="30" y="49" width="106" height="16.5"/>
+                                        <string key="text">Here is your plan
 
 </string>
                                         <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="14"/>
@@ -309,7 +309,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4ai-FZ-jVd">
-                                        <rect key="frame" x="257.5" y="57.5" width="0.0" height="0.0"/>
+                                        <rect key="frame" x="140" y="57.5" width="0.0" height="0.0"/>
                                         <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="14"/>
                                         <color key="textColor" red="0.3411764706" green="0.45098039220000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
