--- a/DMSDriver/DMSDriver/App/ViewControllers/FilterDataList/FilterDataListVC/Cell/FilterDataListHeaderCell.xib
+++ b/DMSDriver/DMSDriver/App/ViewControllers/FilterDataList/FilterDataListVC/Cell/FilterDataListHeaderCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="98" id="KGk-i7-Jjw" customClass="FilterDataListHeaderCell" customModule="Ashdod_Dev" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="98" id="KGk-i7-Jjw" customClass="FilterDataListHeaderCell" customModule="Gadot_Dev" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="469" height="98"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -76,7 +76,7 @@
                 <outlet property="imvIcon" destination="5cS-35-zcn" id="5PM-2b-Hl3"/>
                 <outlet property="lblTitle" destination="SLq-Pu-6Km" id="hBn-e9-IGT"/>
             </connections>
-            <point key="canvasLocation" x="303.19999999999999" y="124.13793103448276"/>
+            <point key="canvasLocation" x="255" y="100"/>
         </tableViewCell>
     </objects>
     <resources>
