--- a/DMSDriver/DMSDriver/App/ViewControllers/FilterDataList/FilterDataListVC/Cell/FilterDataTypeRowCell.xib
+++ b/DMSDriver/DMSDriver/App/ViewControllers/FilterDataList/FilterDataListVC/Cell/FilterDataTypeRowCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="75" id="n7T-Am-ItB" customClass="FilterDataTypeRowCell" customModule="DMSDriver" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="75" id="n7T-Am-ItB" customClass="FilterDataTypeRowCell" customModule="Gadot_Dev" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="376" height="75"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="n7T-Am-ItB" id="jZN-gd-PAw">
@@ -82,7 +82,7 @@
                 <outlet property="btnDelivery" destination="eVi-4j-imn" id="S2C-TC-JCx"/>
                 <outlet property="btnPickup" destination="n3W-nB-6yn" id="4xm-FS-fRf"/>
             </connections>
-            <point key="canvasLocation" x="256" y="204.64767616191907"/>
+            <point key="canvasLocation" x="198" y="167"/>
         </tableViewCell>
     </objects>
 </document>
