--- a/DMSDriver/DMSDriver/App/ViewControllers/FilterDataList/FilterDataListVC/FilterDataListVC.xib
+++ b/DMSDriver/DMSDriver/App/ViewControllers/FilterDataList/FilterDataListVC/FilterDataListVC.xib
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FilterDataListVC" customModule="DMSDriver" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FilterDataListVC" customModule="Gadot_Dev" customModuleProvider="target">
             <connections>
                 <outlet property="btnCancel" destination="JRL-6t-9Nf" id="dyU-xf-B6k"/>
                 <outlet property="btnClearAll" destination="Q1W-Vv-oHd" id="Gwf-Er-tXD"/>
@@ -108,7 +108,7 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="h2j-FF-bs8" secondAttribute="bottom" id="jgi-KA-ZjD"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <point key="canvasLocation" x="-58" y="33"/>
+            <point key="canvasLocation" x="170" y="13"/>
         </view>
     </objects>
     <resources>
